force-app/main/default/objects/Contact/fields/access_company_cases__c.field-meta.xml
<CustomField>
    <fullName>access_company_cases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto created by SCMT.</description>
    <label>Access Company Cases</label>
    <type>Checkbox</type>
</CustomField>