force-app/main/default/objects/Contact/fields/access_private_portal__c.field-meta.xml
<CustomField>
    <fullName>access_private_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto created by SCMT.</description>
    <label>Access Private Portal</label>
    <type>Checkbox</type>
</CustomField>