force-app/main/default/objects/Contact/fields/ACM_Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>ACM_Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACM Referral Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>