force-app/main/default/objects/Contact/fields/Alerts__c.field-meta.xml
<CustomField>
    <fullName>Alerts__c</fullName>
    <formula>IF (OR(ISPICKVAL(Function__c,&quot;&quot;)), 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &apos;Yellow&apos; ,12,12) &amp; &apos; Function is not selected. Please update the value.&apos; &amp; BR(), 
NULL) 
&amp; 
IF (OR(MailingCountry=&quot;&quot;), 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &apos;Yellow&apos; ,12,12) &amp; &apos; Country is not selected. Please update the value.&apos; &amp; BR(), 
NULL) 
&amp; 
IF (OR(Email=&quot;&quot;), 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &apos;Yellow&apos; ,12,12) &amp; &apos; Email is not selected. Please update the value.&apos; &amp; BR(), 
NULL)
&amp; 
IF (OR(MobilePhone=&quot;&quot;), 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &apos;Yellow&apos; ,12,12) &amp; &apos; Mobile is not added. Please update the value.&apos; &amp; BR(), 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerts</label>
    <type>Text</type>
</CustomField>