force-app/main/default/objects/Contact/fields/background__c.field-meta.xml
<CustomField>
    <fullName>background__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Background</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>