force-app/main/default/objects/Contact/fields/ContactNotes__c.field-meta.xml
<CustomField>
    <fullName>ContactNotes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>