force-app/main/default/objects/Contact/fields/Customer_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Access</label>
    <type>Checkbox</type>
</CustomField>