force-app/main/default/objects/Contact/fields/Deskcom__twitter_username__c.field-meta.xml
<CustomField>
    <fullName>Deskcom__twitter_username__c</fullName>
    <label>Twitter Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>