force-app/main/default/objects/Contact/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <formula>IF(
    CONTAINS(
        &quot;gmail.com:yahoo.com:aol.com:hotmail.com&quot;,
        SUBSTITUTE(
            Email, 
            LEFT(Email, FIND(&quot;@&quot;, Email)), 
            NULL
        )
    ),
    
    NULL,
    
    SUBSTITUTE(
        Email, 
        LEFT(Email, FIND(&quot;@&quot;, Email)), 
        NULL 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>