force-app/main/default/objects/Contact/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <length>4</length>
    <type>Text</type>
</CustomField>