force-app/main/default/objects/Contact/fields/IXM_Web_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>IXM_Web_Expiry_Date__c</fullName>
    <label>IXM Web Expiry Date</label>
    <type>Date</type>
</CustomField>