force-app/main/default/objects/Contact/fields/IXM_Web_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>IXM_Web_Renewal_Date__c</fullName>
    <label>IXM Web Renewal Date</label>
    <type>Date</type>
</CustomField>