force-app/main/default/objects/Contact/fields/Price_Book_Contact__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Book Contact</label>
    <type>Checkbox</type>
</CustomField>