force-app/main/default/objects/Contact/fields/pw_cc__CountryText__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__CountryText__c</fullName>
    <label>CountryText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>