force-app/main/default/objects/Contact/fields/pw_cc__MailingAddressStatus__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__MailingAddressStatus__c</fullName>
    <label>Mailing Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not checked</fullName>
                <default>true</default>
                <label>Not checked</label>
            </value>
            <value>
                <fullName>Not matched</fullName>
            </value>
            <value>
                <fullName>Parsed but not found</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>