force-app/main/default/objects/Contact/fields/pw_cc__MailingStateLookup__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__MailingStateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mailing State Lookup</label>
    <referenceTo>pw_cc__State__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>