force-app/main/default/objects/Contact/fields/pw_cc__StateText__c.field-meta.xml
<CustomField>
    <fullName>pw_cc__StateText__c</fullName>
    <label>StateText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>