force-app/main/default/objects/Contact/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request a Quote</fullName>
            </value>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Become a Reseller</fullName>
            </value>
            <value>
                <fullName>Contact Tech Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>