force-app/main/default/objects/Contact/fields/Receive_Communication__c.field-meta.xml
<CustomField>
    <fullName>Receive_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Communication</label>
    <type>Checkbox</type>
</CustomField>