force-app/main/default/objects/Contact/fields/Server_Machine_Code__c.field-meta.xml
<CustomField>
    <fullName>Server_Machine_Code__c</fullName>
    <label>Server Machine Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>