force-app/main/default/objects/Contact/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Agrigento</fullName>
            </value>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Alagoas</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>Alessandria</fullName>
            </value>
            <value>
                <fullName>Amapá</fullName>
            </value>
            <value>
                <fullName>Amazonas</fullName>
            </value>
            <value>
                <fullName>Ancona</fullName>
            </value>
            <value>
                <fullName>Andaman and Nicobar Islands</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Anhui</fullName>
            </value>
            <value>
                <fullName>Aosta</fullName>
            </value>
            <value>
                <fullName>Arezzo</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Ascoli Piceno</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Asti</fullName>
            </value>
            <value>
                <fullName>Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>Avellino</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>Baja California</fullName>
            </value>
            <value>
                <fullName>Baja California Sur</fullName>
            </value>
            <value>
                <fullName>Bari</fullName>
            </value>
            <value>
                <fullName>Barletta-Andria-Trani</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>